<resources>
    <string name="app_name">Weather App</string>

    <string name="poc_city_id">City ID</string>
    <string name="poc_city_zip">Zip Code</string>
    <string name="poc_city_lat">Latitude</string>
    <string name="poc_city_lon">Longitude</string>
    <string name="poc_city_name">City Name</string>
    <string name="poc_country">Country Code</string>
    <string name="poc_btn_current">Current</string>
    <string name="poc_btn_forecast">Forecast</string>


    <string name="poc_error_input">Please enter search criteria</string>

    <string name="mvp_hint_city_name">City Name</string>
    <string name="mvp_hint_country">Country Code</string>
    <string name="mvp_hint_zip">Zip Code</string>

    <string name="mvp_or">OR</string>

    <string name="mvp_switch_units">Units</string>
    <string name="mvp_switch_off">F&#176;</string>
    <string name="mvp_switch_on">C&#176;</string>

    <string name="mvp_adapter_current_header">Current Conditions in %1$s</string>
    <string name="mvp_adapter_label_wind">Wind</string>
    <string name="mvp_adapter_label_humidity">Humidity</string>
    <string name="mvp_adapter_label_pressure">Pressure</string>
    <string name="mvp_adapter_label_clouds">Clouds</string>
    <string name="mvp_adapter_value_temp">%1$s&#176;</string>
    <string name="mvp_adapter_value_humid">%1$s</string>
    <string name="mvp_adapter_value_pressure">%1$s hPa</string>
    <string name="mvp_adapter_value_cloud">%1$s</string>
    <string name="mvp_adapter_humid_short">"% humidity"</string>

    <string name="mvp_direction_n">N</string>
    <string name="mvp_direction_ne">NE</string>
    <string name="mvp_direction_e">E</string>
    <string name="mvp_direction_se">SE</string>
    <string name="mvp_direction_s">S</string>
    <string name="mvp_direction_sw">SW</string>
    <string name="mvp_direction_w">W</string>
    <string name="mvp_direction_nw">NW</string>

    <string name="mvp_speed_imperial">MPH</string>
    <string name="mvp_speed_metric">Meters/Second</string>
    <string name="mvp_speed_metric_short">M/S</string>

    <string name="mvp_adapter_forecast_header">5 Day Forecast</string>

    <string name="mvp_error_input">Please either enter a city or zip code</string>

    <string name="enhanced_hint_input">Search Location</string>
    <string name="enhanced_error_gps">"We're unable to determine your location at this time. Please try again later"</string>
    <string name="enhanced_error_weather">"We're unable to determine the weather for that location"</string>

</resources>
