<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rws.weatherapp.MVPActivity">

    <android.support.percent.PercentRelativeLayout
        android:paddingTop="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/txt_city_name"
            app:layout_widthPercent="50%"
            app:layout_marginStartPercent="5%"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:nextFocusDown="@+id/txt_country"
            android:nextFocusRight="@+id/txt_country"
            android:nextFocusUp="@+id/txt_country"
            android:nextFocusLeft="@+id/txt_country"
            android:hint="@string/mvp_hint_city_name"
            android:textSize="12sp"
            android:ems="10"
            android:inputType="textCapWords" />


        <TextView
            android:id="@+id/lbl_or"
            app:layout_widthPercent="50%"
            app:layout_marginStartPercent="5%"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_below="@+id/txt_city_name"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:text="@string/mvp_or" />

        <EditText
            android:id="@+id/txt_zip"
            app:layout_widthPercent="50%"
            app:layout_marginStartPercent="5%"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_or"
            android:nextFocusDown="@+id/txt_country"
            android:nextFocusRight="@+id/txt_country"
            android:nextFocusUp="@+id/txt_country"
            android:nextFocusLeft="@+id/txt_country"
            android:textSize="12sp"
            android:layout_alignParentStart="true"
            android:hint="@string/mvp_hint_zip"
            android:ems="10"
            android:inputType="text" />


        <Switch
            android:id="@+id/switch_units"
            app:layout_widthPercent="25%"
            app:layout_marginStartPercent="5%"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/txt_zip"
            android:layout_alignBaseline="@+id/txt_zip"
            android:textColor="@color/white"
            android:showText="true"
            android:text="@string/mvp_switch_units"
            android:textOff="@string/mvp_switch_off"
            android:textOn="@string/mvp_switch_on"/>

        <EditText
            android:id="@+id/txt_country"
            app:layout_widthPercent="25%"
            android:gravity="center"
            app:layout_marginStartPercent="5%"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            android:maxLength="2"
            android:layout_height="wrap_content"
            android:hint="@string/mvp_hint_country"
            android:layout_toEndOf="@+id/txt_city_name"
            android:ems="10"
            android:inputType="textCapCharacters"/>

        <android.support.percent.PercentFrameLayout
            android:id="@+id/fl_search"
            android:layout_toEndOf="@+id/txt_country"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/txt_country"
            android:layout_alignBottom="@+id/txt_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_search"
                android:layout_gravity="center"
                app:layout_widthPercent="50%"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </android.support.percent.PercentFrameLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/txt_zip"
            android:layout_centerHorizontal="true" />

    </android.support.percent.PercentRelativeLayout>

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp" />-->

    <android.support.percent.PercentFrameLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_earth"
            android:layout_gravity="center"
            app:layout_widthPercent="90%"
            app:layout_aspectRatio="100%"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/earth" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_gravity="center_horizontal"
            android:overScrollMode="never"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </android.support.v7.widget.RecyclerView>
    </android.support.percent.PercentFrameLayout>


</LinearLayout>
