<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rws.weatherapp.MVPActivity">

    <android.support.percent.PercentRelativeLayout
        android:paddingTop="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.percent.PercentFrameLayout
            android:id="@+id/fl_gps"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_widthPercent="15%"
            app:layout_aspectRatio="125%">
            <ImageView
                android:id="@+id/img_gps"
                android:layout_gravity="center"
                app:layout_widthPercent="50%"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_compass" />
        </android.support.percent.PercentFrameLayout>


        <Switch
            android:id="@+id/switch_units"
            app:layout_marginEndPercent="2%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@+id/input"
            android:textColor="@color/white"
            android:showText="true"
            android:text="@string/mvp_switch_units"
            android:textOff="@string/mvp_switch_off"
            android:textOn="@string/mvp_switch_on"/>

        <AutoCompleteTextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textCapWords"
            android:hint="@string/enhanced_hint_input"
            app:layout_marginEndPercent="2%"
            android:layout_toEndOf="@+id/fl_gps"
            android:layout_toStartOf="@+id/switch_units"
            />


        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true" />

    </android.support.percent.PercentRelativeLayout>


    <android.support.percent.PercentFrameLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_earth"
            android:layout_gravity="center"
            app:layout_widthPercent="90%"
            app:layout_aspectRatio="100%"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/earth" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_gravity="center_horizontal"
            android:overScrollMode="never"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </android.support.v7.widget.RecyclerView>
    </android.support.percent.PercentFrameLayout>


</LinearLayout>