<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/black_50"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="5dp"
        app:layout_widthPercent="90%"
        android:layout_height="wrap_content" >

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_current"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                app:layout_widthPercent="85%"
                android:layout_height="wrap_content"
                android:text="@string/mvp_adapter_current_header" />

            <TextView
                android:id="@+id/lbl_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_below="@+id/lbl_current"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/img_condition"
                app:layout_widthPercent="10%"
                app:layout_aspectRatio="100%"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <LinearLayout
                android:id="@+id/ll_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_temp"
                android:layout_alignParentStart="true"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:id="@+id/lbl_humidity"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_conditions"
                android:layout_alignParentStart="true"
                android:text="@string/mvp_adapter_label_humidity" />
            <TextView
                android:id="@+id/lbl_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbl_humidity"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/lbl_wind"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_humidity"
                android:layout_alignParentStart="true"
                android:text="@string/mvp_adapter_label_wind" />
            <TextView
                android:id="@+id/lbl_wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbl_wind"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/lbl_pressure"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_wind"
                android:layout_alignParentStart="true"
                android:text="@string/mvp_adapter_label_pressure" />
            <TextView
                android:id="@+id/lbl_pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbl_pressure"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/lbl_clouds"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_pressure"
                android:layout_alignParentStart="true"
                android:text="@string/mvp_adapter_label_clouds" />

            <TextView
                android:id="@+id/lbl_clouds_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lbl_clouds"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:textColor="@color/white" />


        </android.support.percent.PercentRelativeLayout>
    </android.support.v7.widget.CardView>


</android.support.percent.PercentFrameLayout>